--- a/main.html
+++ b/main.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Architecture Webpage</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <!-- Main container with fixed width -->
+  <div style="width:1100px; margin: auto;">
+
+    <!-- Image Container -->
+    <div class="imageContainer">
+      <img src="https://images.unsplash.com/photo-1503387762-592deb58ef4e" width="1100">
+    </div>
+
+    <!-- Architecture Table -->
+    <table width="1100" border="1" cellspacing="0" cellpadding="10">
+
+      <!-- Row 1 -->
+      <tr>
+        <td width="200">
+          <img src="https://images.unsplash.com/photo-1529421308418-eab98863cee9" width="200">
+        </td>
+
+        <td width="600">
+          <h3>Modern Architecture</h3>
+          <p>
+            Modern architecture emphasizes clean lines, open spaces, and
+            the use of modern materials such as glass, steel, and concrete.
+          </p>
+        </td>
+
+        <td width="200">
+          <img src="https://images.unsplash.com/photo-1494526585095-c41746248156" width="200">
+        </td>
+      </tr>
+
+      <!-- Row 2 -->
+      <tr>
+        <td width="200">
+          <img src="https://images.unsplash.com/photo-1479839672679-a46483c0e7c8" width="200">
+        </td>
+
+        <td width="600">
+          <h3>Classical Architecture</h3>
+          <p>
+            Classical architecture is rooted in ancient Greek and Roman design,
+            focusing on symmetry, columns, and decorative details.
+          </p>
+        </td>
+
+        <td width="200">
+          <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee" width="200">
+        </td>
+      </tr>
+
+    </table>
+
+  </div>
+
+  <script type="text/javascript" src="./script.js"></script>
 
 </body>
-
 </html>
+
